# Vespa-Labs

./: README  README.rst
OpenFOAM/: README.txt  forceCoeffs  pbs_createcase  qsub_dir  run_openfoam
OpenFOAM/common/: run_openfoam  run_vespagen
OpenFOAM/common/motorBike/0.org/: U  k  omega  p
OpenFOAM/common/motorBike/constant/: transportProperties
OpenFOAM/common/motorBike/system/: forceCoeffs  fvSchemes  readFields  snappyHexMeshDict
OpenFOAM/common/motorBike_changes/: Allclean  Allrun
OpenFOAM/motorBike/0.org/: nut
OpenFOAM/motorBike/constant/: RASProperties
OpenFOAM/motorBike/system/: controlDict  cuttingPlane  decomposeParDict  fvSolution  streamLines
OpenFOAM/motorBike_changes/: blockMeshDict  snappyHexMeshDict
SCII/: LJUD_DynamicLinking.h  LabJackUD.h  README_SCII.txt  SCII.pro  code_snippets.txt  labjack.cpp  labjack.h  labjackthread.cpp  labjackthread.h  ljstream.cpp  ljstream.h  main.cpp  sciimainwindow.cpp  sciimainwindow.h  sciimainwindow.ui  speed.cpp  speed.h
VespaCFD/: README.txt
VespaCFD/AssembleVespa/: AssembleVespa.cxx  AssembleVespa.pro  CMakeLists.txt
VespaCFD/CalculateFrontalArea/: CMakeLists.txt  CalculateFrontalArea.cxx  CalculateFrontalArea.pro  CalculateFrontalArea_README.docx  Horn_Cover.stl  Horn_Cover_side.stl  README.txt  shere_64thetaRes_1radius.stl
VespaCFD/GenerateTearDrop/: GenerateTearDrop.cxx  GenerateTearDrop.pro
VespaCFD/TranslateSTL/: CMakeLists.txt  TranslateSTL.cxx  TranslateSTL.pro
VespaCFD/WrapMesh/: CMakeLists.txt  WrapMesh.cxx
vespacfd/GenerateTearDrop/: CMakeLists.txt
(+9 files in other folders)
